DONE: 	- Mise en place du socle 		- Mise en place du web service 		- Base de données local 		- Fiche restaurant complétée à 90% 		- Ajout de la Map
TODO: 	- Déplacer les string et chiffres de test dans le fichier localizable
		- Utiliser CocoaLumberjack pour le log
		- Refaire un passage sur le code
		- Finaliser la fiche restaurant
		- Possibilité de protocol entre les « CollectionViewCell » et le « collectionViewController »
		- Ajout du Pin sur la Map (information sur le restaurant, affichage itinéraire sur l’application map, …)
		- Pop-Up generic d’affichage des messages d'erreur

--- a/fiche_resto/Ressources/en.lproj/Localizable.strings
+++ b/fiche_resto/Ressources/en.lproj/Localizable.strings
@@ -11,3 +11,8 @@
 
 /* Service */
 "service.error.json" = "Invalid tag information received from the service";
+
+/* RestaurantDetails */
+"restaurant.information.average.price" = "Prix moyen à la carte de ce restaurant:";
+"restaurant.information.number.of.rate" = "avis LaFourchette";
+"restaurant.information.note.on.ten" = "/10";
